@@ -1,39 +1,24 @@
 # barchart
 
-FIXME: Write a one-line description of your library/project.
+Example barchart using ezd3's D3 svg component.  This is an example of
+the interop, not an example of how to do D3 barcharts the best way.
 
-## Overview
-
-FIXME: Write a paragraph about the library/project and highlight its goals.
-
-## Setup
-
-To get an interactive development environment run:
+## Run
 
     lein figwheel
 
 and open your browser at [localhost:3449](http://localhost:3449/).
-This will auto compile and send all changes to the browser without the
-need to reload. After the compilation process is complete, you will
-get a Browser Connected REPL. An easy way to try it is:
 
-    (js/alert "Am I connected?")
+## Dependencies
 
-and you should see an alert in the browser window.
+This example was built using Java 9.  If you're using Java 8 or prior,
+you will want to comment out the following line in `project.clj`.
 
-To clean all compiled files:
+```clojure
+:jvm-opts ["--add-modules" "java.xml.bind"]
 
-    lein clean
-
-To create a production build run:
-
-    lein do clean, cljsbuild once min
-
-And open your browser in `resources/public/index.html`. You will not
-get live reloading, nor a REPL. 
+```
 
 ## License
 
-Copyright © 2014 FIXME
-
-Distributed under the Eclipse Public License either version 1.0 or (at your option) any later version.
+Copyright © 2018 Hitesh Jasani
